--- a/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
@@ -136,15 +136,17 @@
 						          	</ul>
 						        </li>                        	
 		                        
-		                        
-		                        <!--li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuario<span class="caret"></span></a>
-						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="@controllers.routes.User.list()">Listar</a></li>					            
-							            <li class="divider"></li>
-							            <li><a href="@controllers.routes.User.blank()">Crear</a></li>
-						          	</ul>
-						        </li-->     
+		                        @if(session.get("logged") == "1") {
+			                        <li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuario<span class="caret"></span></a>
+							          	<ul class="dropdown-menu" role="menu">
+								            <li><a href="@controllers.routes.User.list()">Listar</a></li>					            
+								            <li class="divider"></li>
+								            <li><a href="@controllers.routes.User.blank()">Crear</a></li>
+							          	</ul>
+							        </li>	
+		                        }
+		                             
 		                        
 		                        <li>		 
 		                            <a href="@controllers.routes.User.logout()">Salir</a>
