--- a/NoticiasTVN/web/TvnAdmin/app/views/user/edit.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/user/edit.scala.html
@@ -11,22 +11,55 @@
     
     @form(controllers.routes.User.update(id)) {
         
-        <fieldset>        
-        	@inputText(userForm("u01_Login"), '_label -> "Nombre", '_help -> "",'_error -> userForm.globalError, 'readonly -> "readonly")
-       		@inputPassword(userForm("u01_Password"), '_label -> "Contraseña", '_help -> "Ingrese una contraseña válida.")        
-        	@inputPassword(userForm("u01_Password_Confirmation"),'_label -> "Confirmar contraseña",'_help -> "Repita su contraseña.",'_error -> userForm.error("u01_Password"))            
-            @inputText(userForm("u01_Email"),'_label -> "Email",'_help -> "", 'readonly -> "readonly")        
+        <fieldset>
+        	   
+        	@inputText(
+        		userForm("u01_Login"), 
+        		'_label -> "Nombre", 
+        		'_help -> "", 
+        		'_error -> userForm.globalError, 
+        		'readonly -> "readonly"
+			)
+        		
+       		@inputPassword(
+       			userForm("u01_Password"), 
+       			'_label -> "Contraseña", 
+       			'_help -> "Ingrese una contraseña válida."
+			)
+			        
+        	@inputPassword(
+        		userForm("u01_Password_Confirmation"),
+        		'_label -> "Confirmar contraseña",
+        		'_help -> "Repita su contraseña.",
+        		'_error -> userForm.error("u01_Password")
+			)
+			            
+            @inputText(
+            	userForm("u01_Email"),
+            	'_label -> "Email",
+            	'_help -> "",
+            	'readonly -> "readonly"
+			)
+
+			
+			@select(
+                userForm("profiles.u02_Id"), 
+                options(models.user.U02_Profiles.options), 
+                '_label -> "Perfil", '_default -> "-- Elegir el perfil --",
+                '_showConstraints -> false
+            )
+			                    
         </fieldset>
         
         <div class="actions">
-            <input type="submit" value="Actualiar este usuario" onclick="return confirm('¿Estás seguro de actualizar los datos del usuario?');" class="btn primary"> o 
+            <input type="submit" value="Actualiar este usuario" onclick="return confirm('¿Por favor confirmar que desea actualizar la información del usuario?');" class="btn primary"> o 
             <a href="@controllers.routes.User.list()" class="btn">Cancelar</a> 
         </div>
             
     }
     
     @form(controllers.routes.User.delete(id), 'class -> "topRight") {
-		<input type="submit" value="Eliminar este usuario" onclick="return confirm('¿Estás seguro de eliminar el usuario?');" class="btn danger">
+		<input type="submit" value="Eliminar este usuario" onclick="return confirm('¿Por favor confirmar que desea eliminar la información del usuario?');" class="btn danger">
     }
 
 }
