--- a/NoticiasTVN/web/TvnAdmin/app/views/banner/edit.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/banner/edit.scala.html
@@ -20,7 +20,7 @@
             
              @select(
                 bannerForm("status"), 
-                options("0"-> "Inactivo", "1"-> "Active"),
+                options("0"-> "Inactivo", "1"-> "Activo"),
                 '_default -> "--- Seleccione ---",
                 '_label -> "Estatus",
                 '_error -> bannerForm("status").error.map(_.withMessage("Selecciona una opción.")),
@@ -54,7 +54,7 @@
     }
     
     @form(controllers.routes.Banner.delete(id), 'class -> "topRight") {
-		<input type="submit" value="Delete this banner" onclick="return confirm('¿Por favor confirmar que desea eliminar la información del banner?');" class="btn danger">
+		<input type="submit" value="Eliminar este banner" onclick="return confirm('¿Por favor confirmar que desea eliminar la información del banner?');" class="btn danger">
     }
        
 }
