--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -870,7 +870,41 @@
 	
 	
 	
-	
+	#wrapperx {
+		z-index: 1;	
+		background: #ccc;
+		margin: 0 auto !important;
+		padding:0 !important;
+	}
+
+	#scrollerx {
+		position: absolute;
+		z-index: 2;
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+		-webkit-transform: translateZ(0);
+		-moz-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		-o-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		-webkit-text-size-adjust: none;
+		-moz-text-size-adjust: none;
+		-ms-text-size-adjust: none;
+		-o-text-size-adjust: none;
+		text-size-adjust: none;
+		background-color: #444;	
+	}
+
+	.slide {
+		float: left;
+		height: 100%;
+		padding: 0 !important;
+		margin: 0 !important;
+	}
 	
 	
 	
