--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -66,7 +66,7 @@
 		bottom: 0; 
 		left: 0; 
 		width: 100%;
-		background: #fff;
+		background: #E2E2E2;
 	}
 	
 	.scroller {background-color: #ffffff;}
@@ -87,18 +87,15 @@
 		left: 0; 
 		width: 100%; 
 		height: 50px;
-		line-height: 50px;
-		background: #FFFFFF;
+		line-height: 50px;		
+		background: #044006;		
 		padding: 0;
 		margin: 0;
-		color: #4D4D4D;
+		color: #EEBF00;
 		text-align: left;
 		border-bottom: solid 1pt #4D4D4D;
 		text-transform: uppercase;
-		display: none;
-		font-size: 0.9em;
-		
-		
+		display: none;		
 	}
 			
 	header .glyphicon { color: #3E79C4;}
@@ -114,7 +111,7 @@
 		line-height: 50px;
 		background: #ffffff;
 		padding: 0;
-		border-top: solid #4D4D4D;
+		border: 0;
 		display: none;
 	}
 	
@@ -158,35 +155,55 @@
 		color:#3E79C4; 
 		font-size:1.2em; 
 	}
-	 
+
+
+
+	/*home*/ /*noticias*/
+	body.content-home footer { display: block; }
 	
-	/*noticias*/
-	body.content-noticias #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-home #wrapper .scroller .container,
+	body.content-noticias #wrapper .scroller .container  { 
+		padding:  10px !important;  
+		margin: 0 !important;
+		background-color: #E2E2E2;
+	}
+	
+	body.content-home #wrapper .scroller .container .row,
 	body.content-noticias #wrapper .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	
+	body.content-home #wrapper .scroller .container .row div,
 	body.content-noticias #wrapper .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
 	
+	body.content-home #wrapper .scroller .container figure,
 	body.content-noticias #wrapper .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
-	body.content-noticias #wrapper .scroller .container figure img { width: 100%;  height: auto;}			
+	
+	body.content-home #wrapper .scroller .container figure img, 
+	body.content-noticias #wrapper .scroller .container figure img { width: 100%;  height: auto;}
+	
+	body.content-home #wrapper .scroller .container figcaption,			
 	body.content-noticias #wrapper .scroller .container figcaption {
 		font-size : 1em;			
 		padding: 5px; 
 		width:100%;
-		line-height:20px;
-		color:#3E79C4; 
 		text-align: left;	   
 	    background-color:#ffffff;
 	    bottom: 0;	    
-	    border-bottom: solid #FFD455;
-	    
+	    border-bottom: solid #B8B8B8;	    
 	}
+	
 
 
+	body.content-home #wrapper2 .scroller .container,
 	body.content-noticias #wrapper2 .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	
+	body.content-home #wrapper2 .scroller .container .row, 
 	body.content-noticias #wrapper2 .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	
+	body.content-home #wrapper2 .scroller .container .row div,
 	body.content-noticias #wrapper2 .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
 	
 
-	
+	body.content-home #wrapper2 .scroller .container p.title, 
 	body.content-noticias #wrapper2 .scroller .container p.title {
 		position:relative;
 		margin: 0; 
@@ -197,7 +214,8 @@
 		color:#3E79C4; 
 		
 	}
-	 
+	
+	body.content-home #wrapper2 .scroller .container p.date, 
 	body.content-noticias #wrapper2 .scroller .container p.date {
 		position:relative;
 		margin: 0; 
@@ -208,6 +226,7 @@
 		color:#FFD455; 		
 	}
 	
+	body.content-home #wrapper2 .scroller .container p.description,
 	body.content-noticias #wrapper2 .scroller .container p.description {
 		position:relative;
 		margin: 0; 
@@ -218,6 +237,7 @@
 		font-style:italic;
 	}
 	
+	body.content-home #wrapper2 .scroller .container p.fullstory,
 	body.content-noticias #wrapper2 .scroller .container p.fullstory {
 		position:relative;
 		margin: 0; 
@@ -229,9 +249,13 @@
 	}
 	
 	
-	
+	body.content-home #wrapper2 .scroller .container figure, 
 	body.content-noticias #wrapper2 .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
-	body.content-noticias #wrapper2 .scroller .container figure img { width: 100%;  height: auto;}			
+	
+	body.content-home #wrapper2 .scroller .container figure img,
+	body.content-noticias #wrapper2 .scroller .container figure img { width: 100%;  height: auto;}
+		
+	body.content-home #wrapper2 .scroller .container figcaption,			
 	body.content-noticias #wrapper2 .scroller .container figcaption {
 		font-size : 1em;			
 		padding: 5px; 
@@ -529,7 +553,7 @@
 	hl2 { font-size:1.2em; font-weight: bold; margin: 5px 0 5px 0;}
 
 	/*Home*/
-	body.content-home #wrapper .scroller .container { padding:  0 !important; margin: 0 !important;}	
+	/*body.content-home #wrapper .scroller .container { padding:  0 !important; margin: 0 !important;}	
 	body.content-home #wrapper .scroller .container .row { padding: 0px 2px 2px 2px !important; margin: 0 !important;}
 	body.content-home #wrapper .scroller .container .row:first-child { padding-top: 4px !important; margin: 0 !important;}	
 	body.content-home #wrapper .scroller .container .row .metro { padding: 0px 2px 2px 2px !important; margin: 0 !important;}
@@ -568,7 +592,7 @@
 	    background-color:#3E79C4;
 	    position: absolute;	
 	    bottom: 0;	
-	}
+	}*/
 	/*Home*/
 
 
@@ -906,10 +930,15 @@
 		margin: 0 !important;
 	}
 	
-	
-	
-	
-	
+
+	.block-ellipsis {  
+				 
+  		overflow: hidden; 
+  		text-overflow: ellipsis; 
+  		display: -webkit-box; 
+  		-webkit-line-clamp: 2; 
+  		-webkit-box-orient: vertical;
+	}
 	
 	
 	
