--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -69,6 +69,12 @@
 		background: #E2E2E2;
 	}
 	
+	#wrapper2, #wrapperM {
+		background: #FFFFFF;
+	}
+	
+	
+	
 	.scroller {background-color: #ffffff;}
 	
 	ul {
