--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
@@ -3,7 +3,7 @@
 -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
 }
 	* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
-	html { -ms-touch-action: none; }			
+	html { -ms-touch-action: none; }
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%;}
 	/*@font-face
 	{
@@ -69,8 +69,14 @@
 		bottom: 0; 
 		left: 0; 
 		width: 100%;
-		background: #fff;
+		background: #E2E2E2;
 	}
+	
+	#wrapper2, #wrapperM {
+		background: #FFFFFF;
+	}
+	
+	
 	
 	.scroller {background-color: #ffffff;}
 	
@@ -90,18 +96,15 @@
 		left: 0; 
 		width: 100%; 
 		height: 50px;
-		line-height: 50px;
-		background: #FFFFFF;
+		line-height: 50px;		
+		background: #044006;		
 		padding: 0;
 		margin: 0;
-		color: #4D4D4D;
+		color: #EEBF00;
 		text-align: left;
 		border-bottom: solid 1pt #4D4D4D;
 		text-transform: uppercase;
-		display: none;
-		font-size: 0.9em;
-		
-		
+		display: none;		
 	}
 			
 	header .glyphicon { color: #3E79C4;}
@@ -117,7 +120,7 @@
 		line-height: 50px;
 		background: #ffffff;
 		padding: 0;
-		border-top: solid #4D4D4D;
+		border: 0;
 		display: none;
 	}
 	
@@ -141,8 +144,7 @@
 	figcaption  {
 		position: absolute;		
 		z-index:100;
-		bottom: 20%;
-		font-size : 1.2em;			
+		bottom: 20%;	
 		padding: 5px; 		
 		line-height:20px;				 
 		color:#ffffff; 
@@ -161,66 +163,100 @@
 		color:#3E79C4; 
 		font-size:1.2em; 
 	}
-	 
+
+
+
+	/*home*/ /*noticias*/
+	body.content-home footer { display: block; }
+	body.content-home footer.hidden { display: none; }
 	
-	/*noticias*/
-	body.content-noticias #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-home #wrapper .scroller .container,
+	body.content-noticias #wrapper .scroller .container  { 
+		padding:  10px !important;  
+		margin: 0 !important;
+		background-color: #E2E2E2;
+		width: 100%; 
+	}
+	
+	body.content-home #wrapper .scroller .container .row,
 	body.content-noticias #wrapper .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	
+	body.content-home #wrapper .scroller .container .row div,
 	body.content-noticias #wrapper .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
 	
-	body.content-noticias #wrapper .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
-	body.content-noticias #wrapper .scroller .container figure img { width: 100%;  height: auto;}			
-	body.content-noticias #wrapper .scroller .container figcaption {
-		font-size : 1em;			
+	body.content-home #wrapper .scroller .container figure,
+	body.content-noticias #wrapper .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin-bottom: 10px; }
+	
+	body.content-home #wrapper .scroller .container figure img, 
+	body.content-noticias #wrapper .scroller .container figure img { width: 100%;  height: auto;}
+	
+	body.content-home #wrapper .scroller .container figcaption,			
+	body.content-noticias #wrapper .scroller .container figcaption {		
 		padding: 5px; 
 		width:100%;
-		line-height:20px;
-		color:#3E79C4; 
 		text-align: left;	   
 	    background-color:#ffffff;
 	    bottom: 0;	    
-	    border-bottom: solid #FFD455;
-	    
+	    border-bottom: solid #B8B8B8;
+	    color: #000000;	    
+	}
+	
+	body.content-home #wrapper .scroller .container figcaption .title,			
+	body.content-noticias #wrapper .scroller .container figcaption .title {
+		width:100%;
+		height: 40px;
+		line-height: 20px;
+		float:left;
+		color:#000000;
+		font-size:1.1em;
+		font-weight: bold;	
+	}		
+
+	body.content-home #wrapper .scroller .container figcaption .date,			
+	body.content-noticias #wrapper .scroller .container figcaption .date {
+		width:100%;
+		height: 20px; 
+		line-height: 20px; 
+		float:left; 
+		color:#787B7F; 
+		font-size:0.8em; 
 	}
 
 
-	body.content-noticias #wrapper2 .scroller .container  { padding:  2px !important; margin: 0 !important;}
+
+
+	body.content-home #wrapper2 .scroller .container,
+	body.content-noticias #wrapper2 .scroller .container  { width: 100%; padding:  0 !important; margin: 0 !important;}
+	
+	body.content-home #wrapper2 .scroller .container .row, 
 	body.content-noticias #wrapper2 .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	
+	body.content-home #wrapper2 .scroller .container .row div,
 	body.content-noticias #wrapper2 .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
 	
 
-	
+	body.content-home #wrapper2 .scroller .container p.title, 
 	body.content-noticias #wrapper2 .scroller .container p.title {
 		position:relative;
 		margin: 0; 
-		padding:5px;
-		background:#E6E6E6; 
-		font-size:1.2em; 
+		padding:10px;
+		font-size:1.5em; 
 		font-weight:bold; 
-		color:#3E79C4; 
+		color:#000000; 
 		
 	}
-	 
+	
+	body.content-home #wrapper2 .scroller .container p.date, 
 	body.content-noticias #wrapper2 .scroller .container p.date {
 		position:relative;
 		margin: 0; 
-		padding:5px;
-		background: #3E79C4;		
-		text-align: right;
-		font-size:0.9em; 
-		color:#FFD455; 		
-	}
-	
-	body.content-noticias #wrapper2 .scroller .container p.description {
-		position:relative;
-		margin: 0; 
-		padding:5px;
-		background: #E6E6E6; 
+		padding:10px;	
+		text-align: left;
 		font-size:1em; 
-		color:#1E5733; 
-		font-style:italic;
+		color:#787B7F; 		
 	}
-	
+		
+	body.content-home #wrapper2 .scroller .container p.fullstory,
 	body.content-noticias #wrapper2 .scroller .container p.fullstory {
 		position:relative;
 		margin: 0; 
@@ -232,9 +268,13 @@
 	}
 	
 	
-	
+	body.content-home #wrapper2 .scroller .container figure, 
 	body.content-noticias #wrapper2 .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
-	body.content-noticias #wrapper2 .scroller .container figure img { width: 100%;  height: auto;}			
+	
+	body.content-home #wrapper2 .scroller .container figure img,
+	body.content-noticias #wrapper2 .scroller .container figure img { width: 100%;  height: auto;}
+		
+	body.content-home #wrapper2 .scroller .container figcaption,			
 	body.content-noticias #wrapper2 .scroller .container figcaption {
 		font-size : 1em;			
 		padding: 5px; 
@@ -532,7 +572,7 @@
 	hl2 { font-size:1.2em; font-weight: bold; margin: 5px 0 5px 0;}
 
 	/*Home*/
-	body.content-home #wrapper .scroller .container { padding:  0 !important; margin: 0 !important; overflow:hidden;}	
+	/*body.content-home #wrapper .scroller .container { padding:  0 !important; margin: 0 !important; overflow:hidden;}
 	body.content-home #wrapper .scroller .container .row { padding: 0px 2px 2px 2px !important; margin: 0 !important;}
 	body.content-home #wrapper .scroller .container .row:first-child { padding-top: 4px !important; margin: 0 !important;}	
 	body.content-home #wrapper .scroller .container .row .metro { padding: 0px 2px 2px 2px !important; margin: 0 !important;}
@@ -571,7 +611,7 @@
 	    background-color:#3E79C4;
 	    position: absolute;	
 	    bottom: 0;	
-	}
+	}*/
 	/*Home*/
 
 
@@ -909,10 +949,15 @@
 		margin: 0 !important;
 	}
 	
-	
-	
-	
-	
+
+	.block-ellipsis {  
+				 
+  		overflow: hidden; 
+  		text-overflow: ellipsis; 
+  		display: -webkit-box; 
+  		-webkit-line-clamp: 2; 
+  		-webkit-box-orient: vertical;
+	}
 	
 	
 	
