Se quita el homeV2.js, y se hace referencia al noticiasV2 para evitar redundacia. En teoría se debe borrar el homeV2 ya que queda deprecated Del mismo modo se quita configuraciones asociadas al control de sesiones

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -166,9 +166,13 @@
 
 
 	/*home*/ /*noticias*/
-	body.content-home footer { display: block; }
-	body.content-home footer.hidden { display: none; }
-	
+/*	body.content-home footer { display: block; }
+	body.content-home footer.hidden { display: none; }*/
+
+
+	body.content-noticias footer { display: block; }
+	body.content-noticias footer.hidden { display: none; }
+
 	body.content-home #wrapper .scroller .container,
 	body.content-noticias #wrapper .scroller .container  { 
 		padding:  10px !important;  
