Actualizaciones varias asociadas al offline de la app

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -164,6 +164,9 @@
 	}
 
 
+	body.content-offline footer { display: none; }
+	body.content-offline header { display: none; }
+
 
 	/*home*/ /*noticias*/
 /*	body.content-home footer { display: block; }
