--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/transition.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/transition.css
@@ -6,7 +6,10 @@
 .page.center {-webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0);} 			
 /* Estilo de capa derecha */ 
 .page.right {-webkit-transform: translate3d(100%, 0, 0); transform: translate3d(100%, 0, 0);} 			
-/* Estilo de animación general */ 
+/* Estilo de animaciï¿½n general */ 
 .page.transition {-webkit-transition-duration: .50s; transition-duration: .50s; }
-/* Estilo de animación general */
+/* Estilo de animaciï¿½n general */
 
+
+.page.rightShort {-webkit-transform: translate3d(10%, 0, 0); transform: translate3d(10%, 0, 0);} 		
+.page.leftShort {-webkit-transform: translate3d(-10%, 0, 0); transform: translate3d(-10%, 0, 0);}
