Se programa mensaje de error diseño de alertas en progreso

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -76,7 +76,10 @@
 		background: #FFFFFF;
 	}
 	
-
+	body.content-alertas #wrapper{
+		background: #FFFFFF;		
+	}
+	
 	.scroller {background-color: #ffffff;}
 	
 	ul {
