TVMax: merge de android a iOS y mejoras para que funcionen bien las noticias en iOS 7.0.3 + iconos + splash nuevos

--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/css/main.css
@@ -54,6 +54,7 @@
 	}
 	
 	th, tr,td {text-align: center;}
+	body.content-init #splash {display: block;}
 	body:not(.content-init) #splash {display: none;}
 	
 	
@@ -76,7 +77,10 @@
 		background: #FFFFFF;
 	}
 	
-
+	body.content-alertas #wrapper{
+		background: #FFFFFF;		
+	}
+	
 	.scroller {background-color: #ffffff;}
 	
 	ul {
