--- a/NoticiasTVN/web/TvnAdmin/app/views/banner/edit.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/banner/edit.scala.html
@@ -1,4 +1,4 @@
-@(id: Long, bannerForm: Form[models.news.Banner], files: List[models.news.BannerFile])
+@(id: Long, bannerForm: Form[models.news.Banner])
 
 @import helper._
 @import helper.twitterBootstrap._
@@ -27,34 +27,20 @@
                 'showConstraints -> true,
                 '_help -> "Requerido."
             )
-			
+
         </fieldset>
-        
-        <fieldset>
-            <legend>Files uploads</legend>
-            @for((file,index) <- files.zipWithIndex) {
-	            <div class="clearfix" id="file[@index]_field">	    			
-	    			<div class="input">	    			
-	    				<img id="@file.getIdBannerFile()" src="@file.getLocation()" alt="@file.getName()" data-src="@file.getLocation()" style="width:75%; height: auto; vertical-align: middle">						
-						<input type="file" name="@file.getIdBannerFile()" data-img="@file.getIdBannerFile()" > 
-	        			<span class="help-inline"></span>
-	        			<span class="help-block">Seleccione un banner con una dimensión ajustada en un ancho de @file.getWidth()px.</span>
-	        			<a class="cancel" data-img="@file.getIdBannerFile()" style="cursor: pointer; display: none;">Cancel</a>
-	    			</div>
-				</div>
-            }
-      
-        </fieldset>
-  
-        <div class="actions">        	        	
-            <input type="submit" value="Actualizar este banner" onclick="return confirm('¿Por favor confirmar que desea actualizar la información del banner?');" class="btn primary"> o 
-            <a href="@controllers.routes.Banner.list()" class="btn">Cancelar</a> 
+
+        <div class="actions">        	        	 
+            <input type="submit" value="Actualizar este banner" onclick="return confirm('¿Por favor confirmar que desea actualizar la información del banner?');" class="btn primary">
+            <a class="btn success" id="add" href="@controllers.routes.Banner.uploadFileBanner(id)">Editar archivos</a>
+            <a href="@controllers.routes.Banner.list()" class="btn">Cancelar</a>  
         </div>
             
     }
     
     @form(controllers.routes.Banner.delete(id), 'class -> "topRight") {
 		<input type="submit" value="Eliminar este banner" onclick="return confirm('¿Por favor confirmar que desea eliminar la información del banner?');" class="btn danger">
+		
     }
        
 }
