--- a/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
+++ b/NoticiasTVN/web/TvnAdmin/app/views/main.scala.html
@@ -167,13 +167,10 @@
                 <div class="page-header">
                 
                     <!--h1>@title</h1-->
-                    <!--img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 250px; height:69px" >
-                    <img src="@routes.Assets.at("images/logo-tvn.png")" style="width: 250px; height:69px" -->
-                    
-                    <img src="@routes.Assets.at("images/logo-hecticus.jpeg")" style="width: 15%; height:auto;" />
-           			<img src="@routes.Assets.at("images/logo-apple-store.png")" style="width:5%; height:auto;" />
-            		<img src="@routes.Assets.at("images/logo-google-play.png")" style="width:20%; height:auto;" />        	            	
-            		<img src="@routes.Assets.at("images/logo-tvn.png")" style="width:15%; height:auto;" />
+                                    
+                    <img src="@routes.Assets.at("images/logo-hecticus.png")" style="width: 30%; height:auto;" />
+                    &nbsp;&nbsp;           			        	            
+            		<img src="@routes.Assets.at("images/logo-tvn.png")" style="width:8%; height:auto;" />
                     
                 </div>
 
