--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -116,7 +116,7 @@
 	                    <ul class="nav">
 							
 							
-								<li class="dropdown">
+								<!--li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorías<span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
 							            <li><a href="@controllers.routes.Category.list()">Listar</a></li>
@@ -124,7 +124,7 @@
 							             <li class="divider"></li>
 							            <li><a href="@controllers.routes.Category.blank()">Crear</a></li>
 						          	</ul>
-						        </li>                        	
+						        </li-->                        	
 		                        	
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Banners<span class="caret"></span></a>
