--- a/FutbolBrasil/app/platforms/android/res/values/facebookconnect.xml
+++ b/FutbolBrasil/app/platforms/android/res/values/facebookconnect.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string name="fb_app_id">0</string>
+    <string name="fb_app_id">320314531485580</string>
     <string name="fb_app_name">FutbolBrasil</string>
 </resources>
