--- a/FutbolBrasil/app/platforms/android/res/xml/config.xml
+++ b/FutbolBrasil/app/platforms/android/res/xml/config.xml
@@ -8,7 +8,7 @@
     <author email="dev@cordova.apache.org" href="http://cordova.io">
         Apache Cordova Team
     </author>
-    <content src="index.html" />
+    <content src="login.html" />
     <access origin="*" />
     <feature name="Device">
         <param name="android-package" value="org.apache.cordova.device.Device" />
@@ -41,4 +41,7 @@
     <feature name="GAPlugin" >
     	<param name="android-package" value="com.adobe.plugins.GAPlugin"/>
 	</feature>
+ 	<feature name="FacebookConnectPlugin">
+        <param name="android-package" value="org.apache.cordova.facebook.ConnectPlugin" />
+    </feature>   
 </widget>
