FutbolBrasil: se agrega plugin para obtener valores unicos del device como el IMSI y asi poder identificarlo

--- a/FutbolBrasil/app/platforms/android/res/xml/config.xml
+++ b/FutbolBrasil/app/platforms/android/res/xml/config.xml
@@ -38,7 +38,10 @@
     <feature name="SocialSharing">
         <param name="android-package" value="nl.xservices.plugins.SocialSharing" />
     </feature>
-    <feature name="GAPlugin" >
-    	<param name="android-package" value="com.adobe.plugins.GAPlugin"/>
-	</feature>
+    <feature name="GAPlugin">
+        <param name="android-package" value="com.adobe.plugins.GAPlugin" />
+    </feature>
+    <feature name="UID">
+        <param name="android-package" value="org.hygieiasoft.cordova.uid.UID" />
+    </feature>
 </widget>
