--- a/FutbolBrasil/app/platforms/android/res/xml/config.xml
+++ b/FutbolBrasil/app/platforms/android/res/xml/config.xml
@@ -8,7 +8,7 @@
     <author email="dev@cordova.apache.org" href="http://cordova.io">
         Apache Cordova Team
     </author>
-    <content src="login.html" />
+    <content src="index.html" />
     <access origin="*" />
     <feature name="Device">
         <param name="android-package" value="org.apache.cordova.device.Device" />
