--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -24,10 +24,18 @@
 
 
 	header {top: 0; }
+	header .container .row { font-size: 0.9em; }
+	header .container .row div:first-child {text-align: left;}
+	header .container .row div:last-child {text-align: right;}
+	
 	footer {bottom: 0;}
+	
+	footer .container .row { text-align: center; font-size: 0.7em; }
+
+	
 	header, footer {			
 		position: absolute; 
-		z-index: 2; 		
+		z-index: 2;
 		left: 0; 
 		width: 100%; 
 		height: 50px;
@@ -38,3 +46,7 @@
 		color: #FFFFFF;	
 		border: 0;		
 	}
+
+.hidden {
+    display: none;
+}
