--- a/FutbolBrasil/app/platforms/android/res/xml/config.xml
+++ b/FutbolBrasil/app/platforms/android/res/xml/config.xml
@@ -29,9 +29,6 @@
     <feature name="FileTransfer">
         <param name="android-package" value="org.apache.cordova.filetransfer.FileTransfer" />
     </feature>
-    <feature name="Sms">
-        <param name="android-package" value="com.jsmobile.plugins.sms.Sms" />
-    </feature>
     <feature name="VideoPlayer">
         <param name="android-package" value="org.apache.cordova.videoplayer.VideoPlayer" />
     </feature>
@@ -52,4 +49,7 @@
     <access origin="https://api.facebook.com" />
     <access origin="https://*.fbcdn.net" />
     <access origin="https://*.akamaihd.net" />
+    <feature name="PushPlugin">
+        <param name="android-package" value="com.plugin.gcm.PushPlugin" />
+    </feature>
 </widget>
